--- a/views/media.ejs
+++ b/views/media.ejs
@@ -68,10 +68,9 @@
             <h4><%= book.numberAvail %> available | <%= book.numberOf %> total</h4>
           </li>
           <li class="media-items">
-            <button class="bi bi-dash-lg" style=""></button>
-            <button class="bi bi-plus-lg"></button>
+            <button class="bi bi-dash-lg" style="background-color: #03045e;"></button>
+            <button class="bi bi-plus-lg" style="background-color: #03045e;"></button>
           </li>
-          
           <li class="media-items">
             <p id="book-description"></p>
             <ul id="book-details" contenteditable="false">
