--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,21 @@
   </head>
 
   <body>
-    <h1 class="header-title">SHU Library</h1>
+    <div class="header-title" style="display: flex; justify-content: space-between; align-content: center; padding: 0 20px;">
+      <h1 class="header-title">SHU Library</h1>
+      <button class="add-book-button">
+        Add Book
+      </button>
+    </div>
+    <!-- <ul style="display: inline-flex; list-style-type: none; min-width: 100%;" class="header-title">
+      <li style="position:absolute; vertical-align: 10px;">
+        
+      </li>
+      <li style="float: right; vertical-align: -10px; margin-left: 80%;">
+        
+      </li>
+    </ul> -->
+    
 
     <div class="container">
       <%- include('./partials/sidebar'); %>
