--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -324,6 +324,29 @@ border-radius: 5px;
 resize: vertical;
 }
 
+.header-container {
+  display: flex;
+  align-items: center; /* Align items vertically in the center */
+}
+
+.header-title {
+  margin-right: 10px; /* Adds spacing between the title and the button */
+}
+
+.add-book-button {
+  padding: 8px 16px;
+  padding: 15px 20px;
+  box-sizing: border-box;
+  font-size: 14px;
+  cursor: pointer;
+  background-color: #03045e;
+  font-size: 24px;
+}
+
+.add-book-button:hover {
+  background-color: #03045e;
+}
+
 @media (min-width: 640px) {
   .categories-books {
     grid-template-columns: repeat(2, 1fr);
