--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to Your Mother</title>
+    <title>SHU Library</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link
       rel="stylesheet"
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-    <h1 class="header-title">Welcome to Your Mother</h1>
+    <h1 class="header-title">SHU Library</h1>
 
     <div class="container">
       <%- include('./partials/sidebar'); %>
