--- a/views/media.ejs
+++ b/views/media.ejs
@@ -194,6 +194,23 @@
       });
       toggleEditable(true);
     }
+    // async function addMedia() {
+    //   const request = await fetch("/media", {
+    //   method: "POST",
+    //   body: JSON.stringify({
+    //     name: document.getElementById("book-title").textContent,
+    //     description: document.getElementById("book-description").textContent,
+    //     author: document.getElementById("book-author").textContent,
+    //     numAvail: parseInt(document.getElementById("numAvail").textContent),
+    //     numOf: parseInt(document.getElementById("numOf").textContent),
+    //     mediaID: <%= book.id %>,
+    //   }),
+    //   headers: {
+    //     "Content-Type": "application/json",
+    //   },
+    //   });
+    //   toggleEditable(true);
+    // }
 
 
 //   const express = require("express");
