--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
     <div class="header-title" style="display: flex; justify-content: space-between; align-content: center; padding: 0 20px;">
       <h1 class="header-title">SHU Library</h1>
       <button class="add-book-button">
-        Add Book
+        <a href="/add-media">Add Media </a>
       </button>
     </div>
     <!-- <ul style="display: inline-flex; list-style-type: none; min-width: 100%;" class="header-title">
