--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -10,6 +10,13 @@
       <a href="/reservations"><i class="bi bi-file-plus-fill"></i>&nbsp; Reservations</a>
     </li>
     <li><i class="bi bi-gear-fill"></i>&nbsp; Settings</li>
-    <li><i class="bi bi-door-open-fill"></i>&nbsp; Log out</li>
+    <li>
+      <a href="/login"><i class="bi bi-door-open-fill"></i>&nbsp; Log out</a>
+    </li>
   </ul>
 </div>
+<script>
+  function logOut() {
+    window.location.href("/login");
+  }
+</script>
