--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -33,7 +34,7 @@ a:active {
 
 .container {
   display: flex;
-  height: 100%;
+  height: calc(100vh);
   align-items: stretch;
 }
 
@@ -182,47 +183,47 @@ a:active {
 }
 
 #book-container {
-background-color: #fff;
-padding: 20px;
-border-radius: 8px;
-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-max-width: fit-content;
-text-align: center;
-display: flex;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  max-width: fit-content;
+  text-align: center;
+  display: flex;
 }
 
 #book-title {
-color: #333;
-font-size: 24px;
+  color: #333;
+  font-size: 24px;
 }
 
 #book-author {
-color: #555;
-font-size: 18px;
+  color: #555;
+  font-size: 18px;
 }
 
 #book-cover {
-width: 30%;
-height: auto;
-margin: 20px 0;
-border-radius: 8px;
+  width: 30%;
+  height: auto;
+  margin: 20px 0;
+  border-radius: 8px;
 }
 
 #book-description {
-font-size: 16px;
-color: #666;
-margin-bottom: 20px;
+  font-size: 16px;
+  color: #666;
+  margin-bottom: 20px;
 }
 
 #book-details {
-list-style: none;
-padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 #book-details li {
-font-size: 14px;
-color: #444;
-margin-bottom: 5px;
+  font-size: 14px;
+  color: #444;
+  margin-bottom: 5px;
 }
 
 #media-page-cover {
@@ -237,7 +238,7 @@ margin-bottom: 5px;
 }
 
 #media-page-list {
-  list-style-type: none
+  list-style-type: none;
 }
 
 #media-buttons {
@@ -246,24 +247,36 @@ margin-bottom: 5px;
 }
 
 button {
-background-color: #007bff;
-color: #fff;
-border: none;
-padding: 10px 15px;
-border-radius: 5px;
-cursor: pointer;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 button:hover {
-background-color: #0056b3;
+  background-color: #0056b3;
 }
 
+input[type="text"],
+input[type="date"],
 textarea {
-font-size: 16px;
-padding: 10px;
-border: 1px solid #ccc;
-border-radius: 5px;
-resize: vertical;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  width: 100%;
+  margin-top: 5px;
+}
+
+label {
+  color: #333;
+}
+
+.settings-form {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
 }
 
 @media (min-width: 640px) {
