--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -7,9 +7,13 @@
       <a href="/wishlist"><i class="bi bi-star-fill"></i>&nbsp; Wishlist</a>
     </li>
     <li>
-      <a href="/reservations"><i class="bi bi-file-plus-fill"></i>&nbsp; Reservations</a>
+      <a href="/reservations"
+        ><i class="bi bi-file-plus-fill"></i>&nbsp; Reservations</a
+      >
     </li>
-    <li><i class="bi bi-gear-fill"></i>&nbsp; Settings</li>
+    <li>
+      <a href="/account"><i class="bi bi-gear-fill"></i>&nbsp; Account</a>
+    </li>
     <li><i class="bi bi-door-open-fill"></i>&nbsp; Log out</li>
   </ul>
 </div>
