--- a/views/account.ejs
+++ b/views/account.ejs
@@ -20,18 +20,18 @@
           <div style="display: flex; gap: 15px">
             <div style="flex: 1">
               <label>First Name</label>
-              <input type="text" value="Aigars" />
+              <input type="text" value="Qistina" />
             </div>
 
             <div style="flex: 1">
               <label>Last Name</label>
-              <input type="text" value="Aldermanis" />
+              <input type="text" value="Roslan" />
             </div>
           </div>
 
           <div>
             <label>Email</label>
-            <input type="text" value="aldermanis.aigars@gmail.com" />
+            <input type="text" value="Qistina.roslan@gmail.com" />
           </div>
 
           <div>
