--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -70,7 +70,7 @@
       <input type="text" id="fullnameBox" name="name" placeholder="Full Name" required>
       <input type="email" id= "emailBox" name="email" placeholder="Email Address" required>
       <input type="text" id="usernameBox" name="username" placeholder="Username" required>
-      <input type="password" id="passwordBox" name="psw" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+      <input type="password" id="passwordBox" name="password" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
       <input type="password" id="confirmBox" name="confirm" placeholder="Confirm Password" required>
       <input type="date" id="dobBox" name="DOB" placeholder="Date of Birth" required>
       <input type="number" id="numberBox" name="number" placeholder="Number" required>
