--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -12,6 +12,11 @@
       >
     </li>
     <li>
+      <a href="/checkedout"
+        ><i class="bi bi-arrow-bar-left"></i>&nbsp; Checked out</a
+      >
+    </li>
+    <li>
       <a href="/account"><i class="bi bi-gear-fill"></i>&nbsp; Account</a>
     </li>
     <li>
